# clawgraph

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.test.yml  start-openclaw-gateway.sh
.github/workflows/: dependency-audit.yml  pages.yml  publish.yml  test.yml
docs/: agent-memory-upgrade.md  architecture-gpt54.md  feature-roadmap.md  launch-plan.md  publishing-workflow.md  solution-exploration.md
lobstergym/: README.md  __init__.py  debug-eval.sh  docker-compose.yml
lobstergym/api/: Dockerfile  app.py
lobstergym/eval/: __init__.py  runner.py  tasks.py
lobstergym/reports/: .gitignore
lobstergym/web/: Dockerfile  app.py
lobstergym/web/templates/: base.html  index.html
lobstergym/web/templates/contact/: step1.html  step2.html  thankyou.html
lobstergym/web/templates/flights/: book.html  confirmation.html  results.html  search.html
lobstergym/web/templates/shop/: cart.html  checkout.html  detail.html  order_confirmation.html  products.html
lobstergym/web/templates/todos/: list.html
scripts/: openclaw-chat.ps1
site/: index.html
skills/clawgraph/: SKILL.md
src/clawgraph/: __init__.py  cli.py  config.py  cypher.py  db.py  llm.py  memory.py  ontology.py  tools.py  vectors.py
tests/: __init__.py  conftest.py  test_cli.py  test_confidence.py  test_config.py  test_cypher.py  test_cypher_properties.py  test_db.py  test_db_properties.py  test_decay.py  test_delete.py  test_devcontainer_docs.py  test_entity_resolution.py  test_llm.py  test_memory.py  test_ontology.py  test_provenance.py  test_recall.py  test_relationship_properties.py  test_tiered_models.py  test_tools.py  test_vectors.py  test_workflow_schema.py
